[project]
name = "test-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "uvicorn[standard]>=0.34.3",
    "watchfiles>=1.0.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = [
    "app/**/*.py",
]
exclude = [
    "app/tests/**/*.py",
    "app/routers/__init__.py",
    "app/schemas/__init__.py",
    ".venv/**/*.py",
]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
